Added some new textures, none used yet

--- a/space-station.html
+++ b/space-station.html
@@ -5,5 +5,7 @@
 	<body>
 		<script src="js/lib/preloadjs-0.4.1.min.js"></script>
 		<script src="js/loader.js"></script>
+		<script id='vShader_comet' type='x-shader/x-vertex'>
+		</script>
 	</body>
 </html>
