Planets added with distance and size scaled to each other.  Added raycaster that changes planets to red when hit.  Accidently named outUV from .iff to .tiff

--- a/space-station.html
+++ b/space-station.html
@@ -4,6 +4,7 @@
 	</head>
 	<body>
 		<script src="js/lib/preloadjs-0.4.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script src="js/loader.js"></script>
 		<script id='vShader_comet' type='x-shader/x-vertex'>
 		</script>
