completed documentation and finished everything else

--- a/one-page.html
+++ b/one-page.html
@@ -51,34 +51,38 @@
 			
 			<section>
 				<h2>Story</h2>
-				<p>There is no story behind our space adveture, except that you are a space cadet exploring a space station. </p>
+				<p>There is no story behind our space adveture, except that you are a space cadet exploring the solar system. </p>
 			</section>
 			
 			<section>
 				<h2>Aesthetics</h2>
-				<p>The Sim is made up of 3D models, some created in Maya and some just textured shapes using three.js </p>
+				<p>The Sim is made up of 3D models, some created in Maya and some just textured shapes using three.js. The camera is free to move and is controlled by the user, you may not exit the skybox however.
+
+				</p>
 				<h3>Sounds</h3>
-				<p>We will have constant background music playing no matter where you are in the map. There will be a different song for inside and outside the station. When inside there will also be various electronic sounds that play randomly. When a door is opened, a typical "woosh" sound will be heard. The shuttle will have a rocket sound when you boost.</p>
+				<p>We have a constant background sound that plays on the load of the page. The music was found for free on <a href ="http://www.nosoapradio.us/">here</a> There is also a select "blip" sound that is played when you click on any planet. Jake created this sound using <a href ="http://www.bfxr.net/">BFXR</a></p>
 			</section>
 			
 			<section>
-				<h2>Gameplay</h2>
-				<h3>Mechanics</h3>
-				<p>We have two main mechanics for this simulation, walking/floating around the inside the space station and flying the space shuttle outside the station. Inside the station there are doors to open that seperate the two halves of the station. To open a door, approach it and press E (a screen tip is displayed). Outside in the space shuttle you can fly around in space and re-dock to re-enter the station.</p>
-		
-				
-				<h3>Control</h3>
-				<p>Inside the space station you used WASD to walk around the inside of the station. Outside the station you use W for thrust forward, S to slow down, A for roll left D for roll right, Mouse Up for pitch up, and Mouse Down for pitch down.
-				</p>
+				<h2>Mechanics and Controls</h2>
+				<p>The main mechanic is using the mose to look around. You may left click to zoom in, and right click to zoom out. When you click on a planet the camera zooms into see the planet up close, some info is also displayed on the right hand side. There are comets that fly around the screen but they are very hard to see.</p>
 				<ul>
 					<li>WASD</li>
 					<li>Mouse to look</li>
-				</ul>		
+				</ul>
+		
+				
+				<h3>3D models</h3>
+				<p>There is one custom model we used to make the space station floating around the Earth. Each of the planets are made using spheres and the skybox is a giant cube.
+				</p>		
 			</section>
 			
 			<section>
-				<h2>About the Team</h2>
-				<p>Jake and Matt are two fun loving game designers who are up for anything.</p>
+				<h2>The Team</h2>
+				<h3>Matt Zeosky</h3>
+				<p>Wrote some of the base code and set-up the modules on the project. Matt implemented the comets, camera, and parsed the planet data.</p>
+				<h3>Jake Russell</h3>
+				<p>Wrote some of the base code and Created all visuals, minus the comets, and the custom models. Jake implemented the skybox, music, sound effect.</p>
 			</section>
 		</div>
 	</div>
